--- a/AimTrainerAIController/MainWindow.axaml
+++ b/AimTrainerAIController/MainWindow.axaml
@@ -36,7 +36,7 @@
 		<TextBlock Name="ProgressPercentage" Margin="0 0 0 20"/>
 		<TextBlock Text="Console Output:"/>
 		<ScrollViewer Height="200" VerticalScrollBarVisibility="Auto">
-			<TextBox Name="ConsoleOutput" Background="#222222" Foreground="White" IsReadOnly="True" AcceptsReturn="True" VerticalScrollBarVisibility="Auto"/>
+			<TextBox Name="ConsoleOutput" Background="#222222" Foreground="White" IsReadOnly="True" AcceptsReturn="True"/>
 		</ScrollViewer>
 		<TextBlock Name="StatusLabel" Margin="0 10 0 0"/>
 	</StackPanel>
